--- a/index.html
+++ b/index.html
@@ -10,7 +10,15 @@
     <script src="https://cdn.jsdelivr.net/npm/chroma-js@2.4.2/chroma.min.js"></script>
     <script type="module" src="js/main.js"></script>
     
-    <title>Клаворешалка</title>
+    <title>Клаворешалка (KeySolve-ru)</title>
+
+    <meta name="description" content="Keyboard layout analyzer for Russian layouts">
+    <meta property="og:title" content="Клаворешалка (KeySolve-ru)">
+    <meta property="og:description"
+        content="Keyboard layout analyzer for Russian layouts">
+    <meta property="og:image" content="/keysolve.png">
+    <meta property="og:url" content="https://tabidots.github.io/keysolve-ru/">
+    <meta property="og:type" content="website" />
 </head>
 
 <body>
