fix OpenGraph preview image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <meta property="og:title" content="Клаворешалка (KeySolve-ru)">
     <meta property="og:description"
         content="Keyboard layout analyzer for Russian layouts">
-    <meta property="og:image" content="/keysolve.png">
+    <meta property="og:image" content="https://tabidots.github.io/keysolve-ru/keysolve-og.png">
+    <meta property="og:image:width" content="2513">
+    <meta property="og:image:height" content="1320">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:url" content="https://tabidots.github.io/keysolve-ru/">
     <meta property="og:type" content="website" />
 </head>
