Add link to explanations

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="box">
             <div id="kbd">
-                
+                Loading...
             </div>
         </div>
         <div id="stat-tooltip" style="display:none; position:absolute;" class="tooltip box small center"></div>
@@ -112,6 +112,9 @@
             <span class="heading">Problematic endings</span>
             <div id="endings" class="morphemes"></div>
         </div>
+        <p style="text-align: center">
+            The metrics are explained <a href="https://github.com/tabidots/keysolve-ru">here</a>.
+        </p>
     </div>
 </div>
 </body>
